[gd_scene load_steps=29 format=2]

[ext_resource path="res://Scenes/Projectiles/Fire/ProjectileEffectFire.tscn" type="PackedScene" id=1]
[ext_resource path="res://Shaders/hit_flash.gdshader" type="Shader" id=2]
[ext_resource path="res://Code/Properties/entity_detect.gd" type="Script" id=3]
[ext_resource path="res://Code/Properties/Hazard/hazard.gd" type="Script" id=4]
[ext_resource path="res://Code/Enemy/enemy.gd" type="Script" id=5]
[ext_resource path="res://Code/Enemy/enemy_state_manager.gd" type="Script" id=6]
[ext_resource path="res://Code/Enemy/enemy_primary_follow.gd" type="Script" id=7]
[ext_resource path="res://Code/Enemy/enemy_idle.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=9]
[ext_resource path="res://Code/Properties/HurtBox/enemy_hurt_box.gd" type="Script" id=10]
[ext_resource path="res://Scenes/ParticleEffects/EnemyDeath/EnemyDeathFire.tscn" type="PackedScene" id=11]
[ext_resource path="res://Art/Enemies/enemyShadows-Sheet-export.png" type="Texture" id=12]
[ext_resource path="res://Art/Playtest Sprites/lightAirFire.png" type="Texture" id=13]
[ext_resource path="res://Scenes/ParticleEffects/TurretBuff/BuffFire.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=20]
resource_name = "FollowCore"

[sub_resource type="Animation" id=21]
resource_name = "FollowPlayer"

[sub_resource type="Animation" id=22]
resource_name = "Idle"

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=32]
resource_name = "Start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "FollowCore"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=25]
states/FollowCore/node = SubResource( 23 )
states/FollowCore/position = Vector2( 655, 112 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 870, 112 )
start_node = "Idle"
graph_offset = Vector2( 76, 38 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="ShaderMaterial" id=33]
resource_local_to_scene = true
shader = ExtResource( 2 )
shader_param/active = false
shader_param/colour = Color( 0.968627, 0.588235, 0.0901961, 1 )

[sub_resource type="CircleShape2D" id=27]
radius = 500.0

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 6, 6 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 8, 8 )

[node name="FireMediumGround" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}
death_particle = ExtResource( 11 )
maxHealth = 10
follow_speed = 12.0
follow_acceleration = 100.0
buff_colour = Color( 0.976471, 0.760784, 0.168627, 1 )
buff_particle = NodePath("BuffFire")

[node name="ParticlePosition" type="Position2D" parent="."]

[node name="Stats" parent="." instance=ExtResource( 9 )]
max_health = 4

[node name="StateManager" type="Node" parent="."]
script = ExtResource( 6 )
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateManager"]
script = ExtResource( 8 )
animation_name = "Idle"
follow_node = NodePath("../FollowCore")
player_range = NodePath("../../AttackRange")
core_range = NodePath("../../CoreRange")

[node name="FollowCore" type="Node" parent="StateManager"]
script = ExtResource( 7 )
animation_name = "FollowCore"
idle_node = NodePath("../Idle")
core_range = NodePath("../../CoreRange")

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FollowCore = SubResource( 20 )
anims/FollowPlayer = SubResource( 21 )
anims/Idle = SubResource( 22 )

[node name="HitFlash" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/RESET = SubResource( 31 )
anims/Start = SubResource( 32 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 25 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )

[node name="BuffFire" parent="." instance=ExtResource( 14 )]
visible = false

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 20 )
texture = ExtResource( 12 )
hframes = 3

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 33 )
texture = ExtResource( 13 )
flip_h = true

[node name="CoreRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoreRange"]
self_modulate = Color( 0.101961, 1, 0, 1 )
shape = SubResource( 27 )

[node name="AttackRange" type="Area2D" parent="."]
visible = false
collision_layer = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2( 0, 2 )
shape = SubResource( 28 )

[node name="HurtBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64
script = ExtResource( 10 )
entity_stats = NodePath("../Stats")
type = 2
hit_flash = NodePath("../HitFlash")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 29 )

[node name="CoreHitBox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 0
script = ExtResource( 4 )
deathEffect = ExtResource( 1 )
damage = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoreHitBox"]
position = Vector2( 0, 2 )
shape = SubResource( 28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 34 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="body_entered" from="CoreRange" to="CoreRange" method="_on_CoreRange_body_entered"]
[connection signal="body_exited" from="CoreRange" to="CoreRange" method="_on_CoreRange_body_exited"]
[connection signal="body_entered" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_entered"]
[connection signal="body_exited" from="AttackRange" to="AttackRange" method="_on_AttackRange_body_exited"]
[connection signal="area_entered" from="HurtBox" to="HurtBox" method="_on_HurtBox_area_entered"]
[connection signal="enemy_buffed" from="HurtBox" to="." method="_on_HurtBox_enemy_buffed"]
[connection signal="enemy_stunned" from="HurtBox" to="." method="_on_HurtBox_enemy_stunned"]
